dont use Scroller.js to fix the header when scrolling the table row, coz it causes problem of aligning the header width and row width, simply replace by a scroll_box

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1681,4 +1681,10 @@ ul.modification_row li {
     background-color: #dcdcdc;
 }
 
+div.scroll_box
+{
+height:250px;
+width: 400px;
+overflow:scroll;
+}
 
